--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
                     </div>
                     <div class="row hero-feedback" >
                         <a href=""><button>Подробнее о доставке</button></a>
-                        <span>или</span> <a href="">перейти в каталог</a>
+                        <div class="link-to-catalog">
+                            <span>или</span> <a href="">перейти в каталог</a>
+                        </div>
+
                     </div>
                 </div>
             </div>
